--- a/assets/styles/scss/bundle.scss
+++ b/assets/styles/scss/bundle.scss
@@ -3,4 +3,8 @@
 @import 'components/master';
 @import 'components/navbar';
 @import 'site/home';
+@import 'site/pga';
+@import 'site/bussiness';
+@import 'site/administration';
+@import 'site/us';
 @import 'components/footer';
