--- a/assets/styles/scss/site/_pga.scss
+++ b/assets/styles/scss/site/_pga.scss
@@ -1,8 +1,201 @@
-div#carouselcard {
+//----------------------------dynamic-table---------------------------------//
+section#dynamic-table{
+   .container-fluid {
+     padding: 0 8%;
+   }
+   .owl-prev {
+     width: 46px;
+     height: 51px;
+     position: absolute;
+     top: 40%;
+     left: -10%;
+     background-color: #deb83d;
+     color: #b2b2b2;
+   }
+   .owl-next {
+     width: 46px;
+     height: 51px;
+     position: absolute;
+     top: 40%;
+     right: -10%;
+     background-color: #deb83d;
+     color: #b2b2b2;
+   }
+   .owl-prev span {
+     display: block;
+     background-image: url(../../images/arrow-left-solid.svg);
+     background-repeat: no-repeat;
+     filter: invert(1);
+     width: 23px;
+     height: 22px;
+     left: 0;
+     right: 0;
+     margin-left: auto;
+     margin-right: auto;
+     color: #2B233A98;
+   }
+   .owl-next span {
+     display: block;
+     background-image: url(../../images/arrow-right-solid.svg);
+     background-repeat: no-repeat;
+     filter: invert(1);
+     width: 23px;
+     height: 22px;
+     left: 0;
+     right: 0;
+     margin-left: auto;
+     margin-right: auto;
+     color: #2B233A98;
+   }
+   h6{
+     color: $white;
+   }
+   p{
+     font-weight: 700;
+     font-size: 1rem;
+   }
+   .item{
+     text-align: center;
+   }
+     .list1:not(:last-child){
+       border-bottom: 1px solid #00000059;
+     }
+ 
+     .list1{
+       background-color: $steelgray;
+       display: flex;
+       flex-direction: row;
+       align-items: center;
+       padding: 0.5rem 0.5rem 0.5rem 0.8rem;
+       .text-list p{
+         color: white;
+         font-weight: 400;
+ 
+       }
+       .img-list {
+         width: 40px;
+         text-align: center;
+         margin-right: 15px;
+         img{
+           height: 35px;
+           width: 40px;
+         }
+       }
+     }
+ 
+ 
+   .list-group-item:not(:last-child) {
+     border-bottom: 1px solid #373948;
+   }
+   .list-group-item{
+   padding: 0.5rem 0.5rem;
+   }
+   .card{
+     border:none;
+     border-radius: 0;
+     .list-group.list-group-flush {
+       box-shadow: 0px 3px 6px #00000029;
+       margin-bottom: 18px;
+     }
+   }
+   .card.prueba {
+     margin-top: 190px;
+   }
+   .card-textp {
+     text-align: initial;
+   }
+   .card-header{
+     border-radius: 0;
+   }
+}
+#carouselcard {
    margin-left: 0;
    margin-right: 0;
    .owl-stage-outer {
       padding: 0;
    }
+}
+
+//----------------------------scheme---------------------------------//
+section#scheme{
+   background-color: $primary;
+   padding: 12vh 0;
+      .display-5{
+         text-align: center;
+         font-weight: bold;
+         margin-bottom: 60px;
+      }
+      .gridscheme{
+         display: grid;
+         grid-template-columns: 8% 1fr 8% 1fr 8% 1fr;
+         align-items: center;
+         grid-column-gap: 10px;
+         grid-row-gap: 43px;
+            h5, .display-1{
+            color: $white;
+            font-weight: bold;
+            margin-bottom: 0;
+      }
+      .display-1{
+         text-align: center;
+         font-size: 90px;
+      }
+     }
+}
+
+ 
+/*----------------------------Querys-------------------------------*/
+@media (max-width:991px) {
+   section#dynamic-table {
+      padding: 8vh 0;
+      .card.prueba{
+         margin-top: 0px;
+      }
+   }   
+   .container-fluid {
+      padding: 0 8%;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+   }   
+ 
+   #carouselcard {
+      padding: 0 12px;
+     .owl-stage-outer, .owl-stage, .owl-item {
+         height: 100%;
+     }
+     .owl-stage {
+         align-items: center;
+         display: flex;
+     }
+  }
+  section#scheme{
+    padding: 8vh 0;
+    .display-5{
+      margin-bottom: 30px;
+    }
+    .gridscheme{
+      grid-template-columns: 15% 1fr;
+      h1.display-1 {
+        font-size: 82px;
+      }
+    }
+  }
+}   
+
+@media (max-width:575px) {
+   section#dynamic-table{
+      .container-fluid {
+        padding: 0 10%;
+  
+        .owl-prev {
+          left: -40px;
+        }
+        .owl-next {
+          right: -40px;
+        }
+      }
+    }
 }
 
