done styles mobile 11082021 2119

--- a/assets/styles/scss/components/_master.scss
+++ b/assets/styles/scss/components/_master.scss
@@ -229,6 +229,7 @@ section#questions{
         color: #373948;
         background-color: #f4f4f4;
         border: none;
+        text-align: left;
       }
       .accordion-button:not(.collapsed)::after {
         filter: grayscale(1);
