--- a/assets/styles/scss/components/_navbar.scss
+++ b/assets/styles/scss/components/_navbar.scss
@@ -7,75 +7,60 @@ header {
     top: 0;
     left: 0;
     height: 71px;
-    a{
-        color: $stylewhite !important;
-    }
-    ul.navbar-nav.mb-2.mb-lg-0 {
-    height: 100%;
-    }
-    ul.navbar-nav li.nav-item {
-    height: 100%;
-    }
+
     .navbar-expand-lg {
          justify-content: space-between;
          align-items: stretch;
-         // .navbar-brand{
-         //    padding-top: .8rem;
-         //    padding-bottom: .8rem;
-         // }
-        .nav-item:active, .nav-item:hover {
-            // background-color: #DEB83D;
-
-            // a{
-            //     color: #2b233a !important;
-            // }
+        a{
+            color: $stylewhite !important;
         }
-    }
-    .navbar-collapse {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        align-items: flex-end;
-        justify-content: flex-end;
-        li.nav-item {
-            width: 112px;
-            // height: 71px;
+        ul.navbar-nav.mb-2.mb-lg-0 {
+            height: 100%;
+            .dropdown-toggle::after{
+                display: none ;
+            }
+        }
+        ul.navbar-nav li.nav-item {
+            height: 100%;
+        }
+        .navbar-collapse {
+            width: 100%;
             display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            flex-direction: row;
+            align-items: flex-end;
+            justify-content: flex-end;
+            li.nav-item {
+                width: 112px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+            li.nav-item:hover {
+                background-color: #deb83d;
+            }
         }
     }
-    .dropdown-toggle::after{
-        display: none ;
-    }
-    .dropdown-item:focus, .dropdown-item:hover {
-        color: #deb83d;
-        background-color: #f8f9fa;
-    }
-    // .navbar .nav-item .dropdown-menu{ display: none; }
+
     .navbar .nav-item:hover .dropdown-menu{ display: block; }
     .dropdown-menu{
         left: -380px;
         padding:30px;
         top: 95%;
-
         .grid-menu{
             display: grid;
             grid-template-columns: 1fr 1fr;
             column-gap: 90px;
             row-gap: 50px;
+            .dropdown-item:focus, .dropdown-item:hover {
+                color: #deb83d;
+                background-color: #f8f9fa;
+            }
         }
-        h6 {
-            margin-bottom: 14px;
-        }
-        // .mtext a{
-        //     color: $primary !important;
-        //     text-decoration: none;
+        // h6 {
+        //     margin-bottom: 14px;
         // }
-
         span.dropdown-item {
-
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -90,14 +75,13 @@ header {
             }
         }
         .dropdown-item:hover, .dropdown-item:focus {
-
-            // background-color: #deb83d;
             a, a:hover{
             border-color: $primary;
             border-bottom: 1px solid;
             color: $primary;
-        }}
+            }
         }
+    }
 
     span.navbar-toggler-icon{
         background-image: url(assets/images/bars-white.svg);
@@ -112,7 +96,7 @@ header {
         padding: 0;
     }
     .navbar-toggler {
-        transition: box-shadow .15s ease-in-out;
+        transition: box-shadow .1s ease-in-out;
     }
 
 /*------------------------------btn-WhatApp------------------------------*/
@@ -187,18 +171,20 @@ header {
 @media (max-width: 991px) {
     header{
         height: auto;
-        // .navbar-brand img {
-        //     padding: 0.8 rem;
-        // }
         ul.navbar-nav.mb-2.mb-lg-0 {
             padding-top: 10px;
-        }
-        li {
-            padding: 0 10px;
+            li.nav-item:hover {
+                background-color: #2b233a;
+            }
+            li {
+                padding: 0 10px;
+            }
         }
         .dropdown-menu {
             left: 0;
             padding: 10px 0;
+            background-color: rgb(255 255 255 / 30%);
+            margin-bottom: 10px;
             .grid-menu{
                 row-gap: 10px;
                 grid-template-columns: 1fr;
@@ -209,25 +195,18 @@ header {
                     .mtext span {
                         display: none;
                     }
+                    h6{
+                        color: $white;
+                    }
                 }
             }
-        }
-        .nav-item:active {
-            // background-color:  $steelgray;
-            // a{
-            //     color: $stylewhite !important;
-            // }
         }
         .dropdown-item:focus, .dropdown-item:hover, .dropdown-item:active {
             color: #deb83d;
             background-color: #6b6575;
         }
-        .dropdown-menu {
-            background-color: rgb(255 255 255 / 30%);
-            margin-bottom: 10px;
-            h6{
-                color: $white;
-            }
+        .collapse:not(.show) {
+            display: none;
         }
         .navbar-collapse {
             justify-content: flex-start;
