--- a/assets/components/header.html
+++ b/assets/components/header.html
@@ -1,89 +1,94 @@
-    <div class="container">
-      <div class="row">
-        <div class="col-12 col-nav">
-          <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="index.html"><img src="assets/images/Component2.svg" alt="Larrarte"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mb-2 mb-lg-0">
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Inversiones</a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <div class="grid-menu">
-                      <div class="imenu"><span class="dropdown-item">
-                        <div class="mimg">
-                          <img src="assets/images/menu1.png" alt="Larrarte">
-                        </div>
-                        <div class="mtext">
-                          <a href="pga.html">
-                            <h6 style="font-weight: 400">PGA</h6>
-                            <h6 class="d-lg-block d-none" style="font-weight: 700">Rentabilidad<br>asegurada</h6>
-                            <h6 class="d-lg-block d-none" style="font-weight: 400">hasta 10% anual</h6>
-                            <span style="color: #DEB83D">Conocé más</span>
-                          </a>
-                        </div>
-                      </span></div>
-                      <div class="imenu"><span class="dropdown-item">
-                        <div class="mimg">
-                          <img src="assets/images/menu3.png" alt="Larrarte">
-                        </div>
-                        <div class="mtext">
-                          <a href="negocios.html">
-                            <h6 style="font-weight: 400">Forestales</h6>
-                            <h6 class="d-lg-block d-none" style="font-weight: 700">Rentabilidad</h6>
-                            <h6 class="d-lg-block d-none" style="font-weight: 400">de 7% a 12%<br>anual</h6>
-                            <span style="color: #DEB83D">Conocé más</span>
-                          </a>
-                        </div>
-                      </span></div>
-                      <div class="imenu"><span class="dropdown-item">
-                        <div class="mimg">
-                          <img src="assets/images/menu2.png" alt="Larrarte">
-                        </div>
-                        <div class="mtext">
-                          <a href="administracion.html">
-                            <h6 style="font-weight: 700">Negocios Ganaderos<h6>
-                            <h6 class="d-lg-block d-none" style="font-weight: 400">Administración, <br>Remates, Inmobiliaria</h6>
-                             <span style="color: #DEB83D">Conocé más</span>
-                          </a>
-                        </div>
-                      </span></div>
-                      <div class="imenu"><span class="dropdown-item">
-                        <div class="mimg">
-                          <img src="assets/images/menu4.png" alt="Larrarte">
-                        </div>
-                        <div class="mtext">
-                          <a href="administracion.html">
-                            <h6 style="font-weight: 700">Negocios Inmobiliarios
-                            <h6 class="d-lg-block d-none" style="font-weight: 400">hasta 9% anual<br>larrarteurbano.com.uy</h6>
-                            <span style="color: #DEB83D">Conocé más</span>
-                          </a>
-                        </div>
-                      </span></div>
-                    </div>
-                  </div>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Soy inversor</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#contact">Contacto</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </div>
-      </div>
-    </div>
-    <div id="whatsappBtn">
-      <a href="#" target="_blank" onclick="_blank">
-        <button>
-          <img src="assets/images/whatsapp.png" alt="Larrarte">
+<div class="container">
+  <div class="row">
+    <div class="col-12 col-nav">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="index.html"><img src="assets/images/Component2.svg" alt="Larrarte"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Inversiones</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="grid-menu">
+                  <div class="imenu"><span class="dropdown-item">
+                    <div class="mimg">
+                      <img src="assets/images/menu1.png" alt="Larrarte">
+                    </div>
+                    <div class="mtext">
+                      <a href="pga.html">
+                        <h6 style="font-weight: 400">PGA</h6>
+                        <h6 class="d-lg-block d-none" style="font-weight: 700">Rentabilidad<br>asegurada</h6>
+                        <h6 class="d-lg-block d-none" style="font-weight: 400">hasta 10% anual</h6>
+                        <span style="color: #DEB83D">Conocé más</span>
+                      </a>
+                    </div>
+                  </span></div>
+                  <div class="imenu"><span class="dropdown-item">
+                    <div class="mimg">
+                      <img src="assets/images/menu3.png" alt="Larrarte">
+                    </div>
+                    <div class="mtext">
+                      <a href="negocios.html">
+                        <h6 style="font-weight: 400">Forestales</h6>
+                        <h6 class="d-lg-block d-none" style="font-weight: 700">Rentabilidad</h6>
+                        <h6 class="d-lg-block d-none" style="font-weight: 400">de 7% a 12%<br>anual</h6>
+                        <span style="color: #DEB83D">Conocé más</span>
+                      </a>
+                    </div>
+                  </span></div>
+                  <div class="imenu"><span class="dropdown-item">
+                    <div class="mimg">
+                      <img src="assets/images/menu2.png" alt="Larrarte">
+                    </div>
+                    <div class="mtext">
+                      <a href="administracion.html">
+                        <h6 style="font-weight: 700">Negocios Ganaderos<h6>
+                        <h6 class="d-lg-block d-none" style="font-weight: 400">Administración, <br>Remates, Inmobiliaria</h6>
+                          <span style="color: #DEB83D">Conocé más</span>
+                      </a>
+                    </div>
+                  </span></div>
+                  <div class="imenu"><span class="dropdown-item">
+                    <div class="mimg">
+                      <img src="assets/images/menu4.png" alt="Larrarte">
+                    </div>
+                    <div class="mtext">
+                      <a href="administracion.html">
+                        <h6 style="font-weight: 700">Negocios Inmobiliarios
+                        <h6 class="d-lg-block d-none" style="font-weight: 400">hasta 9% anual<br>larrarteurbano.com.uy</h6>
+                        <span style="color: #DEB83D">Conocé más</span>
+                      </a>
+                    </div>
+                  </span></div>
+                </div>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Soy inversor</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </div>
+</div>
+<div class="container" id="whatsappBtn">
+  <div class="row">
+    <div class="col-12">
+      <a href="https://api.whatsapp.com/send?phone=59899545787" target="_blank">
+        <button>
+          <img src="assets/icons/whatsapp.png" alt="wpp">
+        </button>
+        <span>Escribinos</span>
       </a>
     </div>
+  </div>
+</div>
