--- a/assets/styles/scss/components/_navbar.scss
+++ b/assets/styles/scss/components/_navbar.scss
@@ -116,65 +116,102 @@ header {
     }
 }
 
-/*------------------------------btn-WhatApp------------------------------*/
-  #whatsappBtn {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    width: auto;
-    padding: 0;
-    z-index: 10;
-    a {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        -webkit-box-align: center;
-        -webkit-align-items: center;
-        -ms-flex-align: center;
-        align-items: center;
-        -webkit-box-pack: center;
-        -webkit-justify-content: center;
-        -ms-flex-pack: center;
-        justify-content: center;
-        text-decoration: none;
-        span {
-            background: var(--secondary);
-            padding: 6px 10px;
-            font-size: 14px;
-            margin-top: -6px;
-        }
-    }
-    a:hover {
-       text-decoration: none;
-       color: var(--text);
-    }
-    button {
-       -webkit-border-radius: 100%;
-       border-radius: 100%;
-       padding: 0px;
-       border: none;
-       position: relative;
-       z-index: 1;
-       -webkit-animation: brickBtn 6s infinite;
-       animation: brickBtn 6s infinite;
+/*----------------------------btnWhatsapp-------------------------------*/
 
-       img {
-        width: 50px;
-       }
+div#whatsappBtn {
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  width: auto;
+  padding: 0;
+  z-index: 10;
+  a {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    text-decoration: none;
+    color: $steelgray;
+    &:hover{
+      text-decoration: none;
     }
-    button:focus {
-       outline: none;
+    span {
+      background: $lightestgrey;
+      padding: 6px 10px;
+      font-size: 14px;
+      margin-top: -6px;
     }
   }
+  button {
+    -webkit-border-radius: 100%;
+    border-radius: 100%;
+    padding: 0px;
+    border: none;
+    position: relative;
+    z-index: 1;
+    -webkit-animation: brickBtn 6s infinite;
+    animation: brickBtn 6s infinite;
+    &:focus{
+      outline: none;
+    }
+    img{
+      width: 50px;
+    }
+  }
+}
 
 
-
+@keyframes brickBtn {
+  0% {
+    transform: translate(0, 0) rotate(0deg);
+  }
+  90% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  91% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  92% {
+    transform: translate(-3px, 0) rotate(1deg);
+  }
+  93% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  94% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  95% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  96% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  97% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  98% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  99% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
 
 /*----------------------------Querys-------------------------------*/
 
@@ -246,6 +283,8 @@ header {
         }
     }
 }
+
+
 
 @media (max-width: 767px) {}
 
