--- a/assets/components/header.html
+++ b/assets/components/header.html
@@ -18,9 +18,9 @@
                     </div>
                     <div class="mtext">
                       <a href="pga.html">
-                        <h6 style="font-weight: 400">PGA</h6>
-                        <h6 class="d-lg-block d-none" style="font-weight: 700">Rentabilidad<br>asegurada</h6>
-                        <h6 class="d-lg-block d-none" style="font-weight: 400">hasta 10% anual</h6>
+                        <p style="font-weight: 400">PGA</p>
+                        <p class="d-lg-block d-none" style="font-weight: 700">Rentabilidad<br>asegurada</p>
+                        <p class="d-lg-block d-none" style="font-weight: 400">hasta 10% anual</p>
                         <span style="color: #DEB83D">Conocé más</span>
                       </a>
                     </div>
@@ -31,9 +31,9 @@
                     </div>
                     <div class="mtext">
                       <a href="negocios.html">
-                        <h6 style="font-weight: 400">Forestales</h6>
-                        <h6 class="d-lg-block d-none" style="font-weight: 700">Rentabilidad</h6>
-                        <h6 class="d-lg-block d-none" style="font-weight: 400">de 7% a 12%<br>anual</h6>
+                        <p style="font-weight: 400">Forestales</p>
+                        <p class="d-lg-block d-none" style="font-weight: 700">Rentabilidad</p>
+                        <p class="d-lg-block d-none" style="font-weight: 400">de 7% a 12%<br>anual</p>
                         <span style="color: #DEB83D">Conocé más</span>
                       </a>
                     </div>
@@ -44,8 +44,8 @@
                     </div>
                     <div class="mtext">
                       <a href="administracion.html">
-                        <h6 style="font-weight: 700">Negocios Ganaderos<h6>
-                        <h6 class="d-lg-block d-none" style="font-weight: 400">Administración, <br>Remates, Inmobiliaria</h6>
+                        <p style="font-weight: 700">Negocios Ganaderos<p>
+                        <p class="d-lg-block d-none" style="font-weight: 400">Administración, <br>Remates, Inmobiliaria</p>
                           <span style="color: #DEB83D">Conocé más</span>
                       </a>
                     </div>
@@ -56,8 +56,8 @@
                     </div>
                     <div class="mtext">
                       <a href="administracion.html">
-                        <h6 style="font-weight: 700">Negocios Inmobiliarios
-                        <h6 class="d-lg-block d-none" style="font-weight: 400">hasta 9% anual<br>larrarteurbano.com.uy</h6>
+                        <p style="font-weight: 700">Negocios Inmobiliarios
+                        <p class="d-lg-block d-none" style="font-weight: 400">hasta 9% anual<br>larrarteurbano.com.uy</p>
                         <span style="color: #DEB83D">Conocé más</span>
                       </a>
                     </div>
