--- a/assets/styles/scss/components/_navbar.scss
+++ b/assets/styles/scss/components/_navbar.scss
@@ -3,7 +3,7 @@ header {
     position: fixed;
     z-index: 10;
     width: 100%;
-    max-width: 100 vw;
+    max-width: 100vw;
     top: 0;
     left: 0;
     height: 71px;
@@ -17,38 +17,36 @@ header {
             flex-direction: row;
             align-items: flex-end;
             justify-content: flex-end;
+            height: 71px;
             ul.navbar-nav {
                 height: 100%;
                 .dropdown-toggle::after{
                     display: none ;
                 }
-
                 li.nav-item {
                     width: 112px;
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
+                      a{
+                        color: $stylewhite;
+                      }
                 }
 
                 li.nav-item:hover {
                     background-color: #deb83d;
+                    a{
+                      color: $steelgray;
+                    }
                 }
             }
             ul.navbar-nav li.nav-item {
                 height: 100%;
             }
-
         }
-
-        a{
-            color: $stylewhite !important;
-        }
-
     }
-
     .navbar .nav-item:hover .dropdown-menu{ display: block; }
-
     .dropdown-toggle::after{
         display: none ;
     }
@@ -57,7 +55,6 @@ header {
         background-color: #f8f9fa;
     }
     // .navbar .nav-item .dropdown-menu{ display: none; }
-
     .dropdown-menu{
         left: -380px;
         padding:30px;
@@ -71,19 +68,17 @@ header {
                 color: #deb83d;
                 background-color: #f8f9fa;
             }
+            // p {
+            //   margin-bottom: 14px;
+            // }
         }
-
-        h6 {
-            margin-bottom: 14px;
-        }
-
         span.dropdown-item {
             display: flex;
             flex-direction: row;
             align-items: center;
             column-gap: 20px;
             filter: none;
-            .mtext h6{
+            .mtext p{
                 margin-bottom: 5px;
             }
             .mtext a{
@@ -254,7 +249,7 @@ div#whatsappBtn {
                     .mtext span {
                         display: none;
                     }
-                    h6{
+                    .mtext p{
                         color: $white;
                     }
                 }
@@ -268,6 +263,7 @@ div#whatsappBtn {
             justify-content: flex-start;
             border-top: 2px solid #deb83d;
             margin-top: 10px;
+            height: 100% !important;
             .navbar-nav {
                 width: 100%;
                 li.nav-item {
