--- a/assets/components/contact.html
+++ b/assets/components/contact.html
@@ -1,6 +1,6 @@
     <div class="container">
       <div class="row">
-        <div class="col-12 contact-center">
+        <div class="col-12 contact-center wow fadeInUp">
           <h2 class="mb-5">¡Contactanos ahora!</h2>
           <div class="contactForm">
             <form id="contactForm" novalidate>
