--- a/assets/components/managementII.html
+++ b/assets/components/managementII.html
@@ -1,6 +1,6 @@
     <div class="container">
       <div class="row">
-        <div class="col-lg-7 col-12 textm">
+        <div class="col-lg-7 col-12 textm wow fadeInLeft">
           <h1>Estás a un paso de tener tu plan <br class="d-none d-lg-block">de inversión segura y diversificada.</h1>
           <h4>Diseñado a medida de tus necesidades</h4>
         </div>
