--- a/assets/components/footer.html
+++ b/assets/components/footer.html
@@ -1,19 +1,19 @@
   <div class="container">
       <div class="row">
-        <div class="col-lg-4 col-12 contact1 wow fadeInLeft">
+        <div class="col-lg-4 col-12 contact1 wow fadeInUp">
           <h6 class="mb-1">Oficinas</h6>
           <div class="line"></div>
           <h6 class="mb-4">MONTEVIDEO<br> Coronel Brandzen 1956. Of. 505.</h6>
           <h6> TACUAREMBÓ<br> Lorem Ipsum 1234</h6>
         </div>
-        <div class="col-lg-4 col-12 contact2 wow fadeInLeft">
+        <div class="col-lg-4 col-12 contact2 wow fadeInUp">
           <h6 class="mb-1">Contacto</h6>
           <div class="line"></div>
           <h6><a href="#" target="_blank" onclick='return false'><img src="assets/images/email.svg" alt="Email" class="ifooter2">gestionlarrarte@gmail.com</a></h6>
           <h6><a href="#" target="_blank" onclick='return false'><img src="assets/images/phone.svg" alt="Telephone" class="ifooter2">2407 0035</a></h6>
           <h6><a href="#" target="_blank" onclick='return false'><img src="assets/images/mobile.svg" alt="Mobil" class="ifooter2">099 545 787</a></h6>
         </div>
-        <div class="col-lg-4 col-12 contact3 wow fadeInRight">
+        <div class="col-lg-4 col-12 contact3 wow fadeInUp">
           <div class="contac-img">
             <img src="assets/images/group-footer.png" alt="Larrarte" class="logo img-fluid">
           </div>
